implementation/k8s/deployment-db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: game-db
  template:
    metadata:
      labels:
        app: game-db
    spec:
      containers:
        - name: db-container
          image: postgres:latest
          ports:
            - containerPort: 5432
