implementation/k8s/deal-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deal-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: deal-service
  template:
    metadata:
      labels:
        app: deal-service
    spec:
      restartPolicy: Always
      containers:
        - name: deal-service
          image: deal-service
          imagePullPolicy: Never
          ports:
            - containerPort: 3004
          livenessProbe:
            httpGet:
              path: /health
              port: 3004
            initialDelaySeconds: 10
            periodSeconds: 10

          readinessProbe:
            httpGet:
              path: /health
              port: 3004
            initialDelaySeconds: 5
            periodSeconds: 5

            # Nodig voor autoscaling en stabiliteit
          resources:
            requests:
              memory: "128Mi"
              cpu: "250m"
            limits:
              memory: "256Mi"
              cpu: "500m"

---
apiVersion: v1
kind: Service
metadata:
  name: deal-service
spec:
  selector:
    app: deal-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3004
