implementation/k8s/deals-db.yaml
#Service
apiVersion: v1
kind: Service
metadata:
  name: deals-db
spec:
  selector:
    app: deals-db
  ports:
    - port: 3306
      targetPort: 3306
