implementation/k8s/platforms-db.yaml
#StatefulSet
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: platforms-db
spec:
  serviceName: "platforms-db"
  replicas: 1
  selector:
    matchLabels:
      app: platforms-db
  template:
    metadata:
      labels:
        app: platforms-db
    spec:
      containers:
        - name: platforms-db
          image: mysql:8.0
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: platforms-init-sql
              mountPath: /docker-entrypoint-initdb.d
            - name: platforms-data
              mountPath: /var/lib/mysql
      volumes:
        - name: platforms-init-sql
          configMap:
            name: platforms-init-sql
  volumeClaimTemplates:
    - metadata:
        name: platforms-data
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 1Gi
---
#Service
apiVersion: v1
kind: Service
metadata:
  name: platforms-db
spec:
  selector:
    app: platforms-db
  ports:
    - port: 3306
      targetPort: 3306
