implementation/k8s/service-app.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-service
spec:
  selector:
    app: game-platform
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
