implementation/k8s/service-db.yaml
apiVersion: v1
kind: Service
metadata:
  name: db-service
spec:
  selector:
    app: game-db
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
  type: ClusterIP
