implementation/k8s/users-db.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: users-db
spec:
  serviceName: "users-db"
  replicas: 1
  selector:
    matchLabels:
      app: users-db
  template:
    metadata:
      labels:
        app: users-db
    spec:
      containers:
        - name: users-db
          image: mysql:8.0
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: users-init-sql
              mountPath: /docker-entrypoint-initdb.d
            - name: users-data
              mountPath: /var/lib/mysql
      volumes:
        - name: users-init-sql
          configMap:
            name: users-init-sql
  volumeClaimTemplates:
    - metadata:
        name: users-data
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 1Gi
---
apiVersion: v1
kind: Service
metadata:
  name: users-db
spec:
  selector:
    app: users-db
  ports:
    - port: 3306
      targetPort: 3306
