implementation/k8s/ingress.yaml
#Ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: game-platform-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-methods: "GET, PUT, POST, DELETE, PATCH, OPTIONS"
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
spec:
  rules:
    - host: game.chippygames.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: game-service
                port:
                  number: 80
    - host: deal.chippygames.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: deal-service
                port:
                  number: 80
    - host: platform.chippygames.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: platform-service
                port:
                  number: 80
    - host: user.chippygames.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: user-service
                port:
                  number: 80
